Mobile My account drawer- mob header  z-index issue fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29913,7 +29913,8 @@ body {
     left: unset;
     position: relative;
     right: unset;
-    z-index: 1030;
+    z-index: 999;
+    /* z-index: 1030; */
   }
   .fixed-top-margin {
     margin-top: unset;
